sweeps/src/snapshots/sweeps__topology__tests__square_and_diamond.snap
---
source: sweeps/src/topology.rs
expression: top
---
Topology(
  shape_a: [
    true,
    true,
    true,
    true,
    false,
    false,
    false,
    false,
  ],
  open_segs: [
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  winding: OutputSegVec(
    inner: [
      HalfSegmentWindingNumbers(
        counter_clockwise: WindingNumber(
          shape_a: 0,
          shape_b: -1,
        ),
        clockwise: WindingNumber(
          shape_a: 0,
          shape_b: 0,
        ),
      ),
      HalfSegmentWindingNumbers(
        counter_clockwise: WindingNumber(
          shape_a: -1,
          shape_b: -1,
        ),
        clockwise: WindingNumber(
          shape_a: 0,
          shape_b: -1,
        ),
      ),
      HalfSegmentWindingNumbers(
        counter_clockwise: WindingNumber(
          shape_a: -1,
          shape_b: 0,
        ),
        clockwise: WindingNumber(
          shape_a: -1,
          shape_b: -1,
        ),
      ),
      HalfSegmentWindingNumbers(
        counter_clockwise: WindingNumber(
          shape_a: 0,
          shape_b: 0,
        ),
        clockwise: WindingNumber(
          shape_a: -1,
          shape_b: 0,
        ),
      ),
      HalfSegmentWindingNumbers(
        counter_clockwise: WindingNumber(
          shape_a: 0,
          shape_b: 0,
        ),
        clockwise: WindingNumber(
          shape_a: -1,
          shape_b: 0,
        ),
      ),
      HalfSegmentWindingNumbers(
        counter_clockwise: WindingNumber(
          shape_a: 0,
          shape_b: -1,
        ),
        clockwise: WindingNumber(
          shape_a: 0,
          shape_b: 0,
        ),
      ),
      HalfSegmentWindingNumbers(
        counter_clockwise: WindingNumber(
          shape_a: -1,
          shape_b: -1,
        ),
        clockwise: WindingNumber(
          shape_a: 0,
          shape_b: -1,
        ),
      ),
      HalfSegmentWindingNumbers(
        counter_clockwise: WindingNumber(
          shape_a: 0,
          shape_b: 0,
        ),
        clockwise: WindingNumber(
          shape_a: 0,
          shape_b: -1,
        ),
      ),
    ],
  ),
  point: HalfOutputSegVec(
    start: [
      Point(
        y: 0.0,
        x: 0.0,
      ),
      Point(
        y: 0.0,
        x: 0.0,
      ),
      Point(
        y: 0.0,
        x: 0.0,
      ),
      Point(
        y: 0.0,
        x: 0.0,
      ),
      Point(
        y: 0.0,
        x: 1.0,
      ),
      Point(
        y: 1.0,
        x: -1.0,
      ),
      Point(
        y: 1.0,
        x: 0.0,
      ),
      Point(
        y: 1.0,
        x: 1.0,
      ),
    ],
    end: [
      Point(
        y: 1.0,
        x: -1.0,
      ),
      Point(
        y: 1.0,
        x: 0.0,
      ),
      Point(
        y: 1.0,
        x: 1.0,
      ),
      Point(
        y: 0.0,
        x: 1.0,
      ),
      Point(
        y: 1.0,
        x: 1.0,
      ),
      Point(
        y: 2.0,
        x: 0.0,
      ),
      Point(
        y: 1.0,
        x: 1.0,
      ),
      Point(
        y: 2.0,
        x: 0.0,
      ),
    ],
  ),
  point_neighbors: HalfOutputSegVec(
    start: [
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(3),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(1),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(0),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(2),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(1),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(3),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(2),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(0),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(3),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(3),
          first_half: false,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(0),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(0),
          first_half: false,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(1),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(1),
          first_half: false,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(6),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(4),
          first_half: false,
        ),
      ),
    ],
    end: [
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(5),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(5),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(6),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(6),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(4),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(6),
          first_half: false,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(4),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(4),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(7),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(2),
          first_half: false,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(7),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(7),
          first_half: false,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(2),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(7),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(5),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(5),
          first_half: false,
        ),
      ),
    ],
  ),
  deleted: OutputSegVec(
    inner: [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
  ),
  scan_east: OutputSegVec(
    inner: [
      None,
      Some(OutputSegIdx(0)),
      Some(OutputSegIdx(1)),
      Some(OutputSegIdx(2)),
      Some(OutputSegIdx(2)),
      None,
      Some(OutputSegIdx(5)),
      Some(OutputSegIdx(5)),
    ],
  ),
)
